Fixing layout issues - About

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -25,7 +25,7 @@
 .tutor-card {
 	height: 80%;
 	width: 350px;
-	max-width: 90%;
+	max-width: 80%;
 	margin: 20px auto;
 	.tutor-img-wrapper {
 		text-align: center;
